# st_woori

./: .gitignore  README.md  pyproject.toml
app/: conf.py  st_main.py  st_utils.py  utils.py
data/: all_sector_df.pkl  sid2name.pkl
tests/: test_st_woori.py
