[tool.poetry]
name = "st_woori"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.11.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.9.0"
jupyterlab = "^3.4.3"
finance-datareader = "^0.9.34"
QuantStats = "^0.0.59"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
